Eliminadas las funciones para crear el tablero por lados, usamos solo la función generar casilla, que usa el constructor de Solar para ya no tener que hacer los setters de hipoteca e impuesto, y además usa el Singleton de Valor para obtener los valores en vez de los 'magic values' de antes